2009-03-10  Marcus Brinkmann  <marcus@g10code.de>

	* client.h, client.cc, gpgex.cc: Change encrypt&sign to
	sign&encrypt everywhere (except in the protocol, of course).

2009-02-11  Marcus Brinkmann  <marcus@g10code.de>

	* bitmaps.cc (load_bitmap): Change minus to underscore.
	* icons.rc: Likewise in identifiers.

2008-09-01  Marcus Brinkmann  <marcus@g10code.com>

	* gpgex.cc (Initialize): Also pay attention to endings pem, p7m
	and p7s.

2008-03-26  Marcus Brinkmann  <marcus@g10code.de>

	* client.cc (default_uiserver_cmdline): Fall back to GPA if
	Kleopatra is not installed.

2008-02-19  Marcus Brinkmann  <marcus@g10code.de>

	* client.cc (default_uiserver_cmdline): Change default uiserver
	path and remove work-around.

2008-02-05  Marcus Brinkmann  <marcus@g10code.de>

	* debug.h: Include <stdio.h>.
	(debug_file, debug_flags): New prototypes.
	* main.cc (debug_file, debug_flags): Make not static.
	* client.cc (uiserver_connect): Fix last change.  Set debug log
	stream.

2008-02-04  Marcus Brinkmann  <marcus@g10code.de>

	* client.cc (send_one_option, getinfo_pid_cb, send_options): New
	functions.
	(uiserver_connect): Take new argument HWND.  Call send_options.
	(client_t::call_assuan): Pass window handle to uiserver_connect.

2008-01-07  Marcus Brinkmann  <marcus@g10code.de>

	* client.cc (default_uiserver_cmdline): Invoke GUI server with
	--daemon.
	(replace_dollar_s): Remove obsolete function.

2007-11-30  Marcus Brinkmann  <marcus@g10code.de>

	* gpgex.cc (start_help): Fix URL string format.

2007-11-16  Marcus Brinkmann  <marcus@g10code.de>

	* gpgex.cc (start_help): Fix URL for Windows Exploder.

2007-11-12  Marcus Brinkmann  <marcus@g10code.de>

	* gpgex.cc (get_lang_name): Fix last change.

	* gpgex.cc (get_lang_name): Get preferred language.
	(start_help): Invoke language specific help.

2007-11-08  Marcus Brinkmann  <marcus@g10code.de>

	* gpgex.cc: Include registry.h.
	(start_help): Launch gpgex help from install directory.